<resources>
    <string name="app_name">Moovers Strore Manager</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="phone">Phone</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="forgot_password"><i> Forgot Password ?</i> </string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_in">SIGN IN</string>
    <string name="no_matter_wehere_you_are_whether_you_are_at_home_or_in_the_office_or_on_the_beach_we_will_fine_you_and_we_will_feed_you">
        No matter wehere you are : \n whether you are at home,or in \n
        the office. or on the beach -we will \n
        fine you and we will feed you.</string>
    <string name="my_orders">My Orders</string>
    <string name="my_products">My Products</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="reports">Reports</string>
    <string name="karan_kumar">Karan Kumar</string>
    <string name="all_order">All order</string>
</resources>
