<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/moov_background_main" />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_50sdp"
        android:src="@drawable/moov_logo_red" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rlLayoutButtom"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_30sdp"
        android:layout_marginRight="@dimen/_30sdp"
        android:gravity="center"
        android:text="@string/no_matter_wehere_you_are_whether_you_are_at_home_or_in_the_office_or_on_the_beach_we_will_fine_you_and_we_will_feed_you"
        android:textColor="@color/white" />


    <RelativeLayout
        android:id="@+id/rlLayoutButtom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_50sdp"
        android:layout_marginLeft="@dimen/_30sdp"
        android:layout_marginRight="@dimen/_30sdp">

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_white_button"
            android:text="@string/sign_up"
            android:textColor="@color/colorPrimary" />


        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/bg_button"
            android:text="@string/sign_in"
            android:textColor="@color/white" />


    </RelativeLayout>

</RelativeLayout>